fixing flickering drop down nav in firefox (margin still off by 5px only in FF for now), flicker its fixed though!

--- a/_src/screen.scss
+++ b/_src/screen.scss
@@ -154,6 +154,10 @@ header {
 	max-width: 175px;
 	position: relative;
 	@include pie-clearfix;
+
+	@media (min-width: 760px) {
+		margin-left: 10px;
+	}//mq760
 }
 
 .nav-logo-hover {
@@ -259,13 +263,15 @@ header {
 	}//mq 760
 
 	&:last-child {
-		margin-right: 0px;
+	@media (min-width:760px){
+		margin-right: 15px;
+	}//mq 760
 
 		&:hover {
 			padding: 0px 0px;
 			@media (min-width: 760px) {
 				padding: 30px 15px;
-				margin-right: -15px;
+				margin-right: 0px;
 				margin-left: -15px;
 			}//mq 760
 		}//hover
@@ -322,7 +328,7 @@ header {
 
 	@media (min-width: 760px) {
 		background-color: #191919;
-		max-width: 300px;
+		max-width: 257px;
 		z-index: 22222222;
 		color: $site-tan;
 		position: absolute;
